--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Hero Section -->
     <section class="hero-section mb-16">
       <div class="relative h-96 rounded-2xl overflow-hidden shadow-xl">
-        <img src="http://static.photos/nature/1200x630/42" alt="Bình Định Landscape" class="w-full h-full object-cover">
+        <img src="https://cdn-media.sforum.vn/storage/app/media/ctvseo_MH/%E1%BA%A3nh%20%C4%91%E1%BA%B9p%20b%C3%ACnh%20%C4%91%E1%BB%8Bnh/%E1%BA%A3nh%20%C4%91%E1%BA%B9p%20bd/anh-dep-binh-dinh-thumbnail.jpg" alt="Bình Định Landscape" class="w-full h-full object-cover">
         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end p-8">
           <div>
             <h1 class="text-4xl md:text-5xl font-bold text-white mb-2">Khám phá Bình Định</h1>
